# ascii-animations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
scripts/: campfire.py  firewall.py  sine.py  wave.py
src/: run.py  sine.py  wave.py
src/animations/: base.py  sine.py  wave.py
src/animations/campfire/: __init__.py  constants.py  fire.py  pedestal.py
src/animations/campfire/elements/: pop.py  simulation.py  sparks.py  wind.py
src/animations/firewall/: __init__.py  constants.py  firewall.py  simulation.py
src/animations/sine/: __init__.py  animation.py
src/animations/wave/: __init__.py  animation.py
src/ascii_animation/: run.py  sine.py  wave.py
src/engine/: base.py  registry.py  run.py
src/engine/fire/: colors.py  simulation.py  sparks.py  wind.py
