[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascii-animation"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[project.scripts]
wave = "scripts.wave:main"
sine = "scripts.sine:main"

[tool.hatch.build.targets.wheel]
sources = {"src" = ""}
packages = ["scripts"]

[tool.ruff]
src = ["src", "scripts"]

[tool.mypy]
files = ["src", "scripts"]

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
]
