[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ascii-animation"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[tool.ruff]
src = ["src", "scripts"]

[tool.mypy]
files = ["src", "scripts"]

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
]
