[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-animation"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = ["numpy>=2.0"]

[project.scripts]
wave = "scripts.wave:main"
sine = "scripts.sine:main"
campfire = "scripts.campfire:main"
firewall = "scripts.firewall:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["engine*", "animations*", "scripts*"]

[tool.ruff]
src = ["src", "scripts"]

[tool.mypy]
files = ["src", "scripts"]

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
]
